Add workaround for KtLint incompatibility with JDK 17
https://github.com/pinterest/ktlint/issues/1943
https://github.com/pinterest/ktlint/issues/1391